--- a/coding_ai/260207_slide.md
+++ b/coding_ai/260207_slide.md
@@ -28,19 +28,7 @@ paginate: true
 - コア技術の埋没による製品価値向上の機会逸失
 <br>
 
-## 技術的課題
-
-- コンテキスト長の限界による入力可能なコード量の制限
-- コードのナレッジ化方法が未確定
-- 生成AIが生成するコードのレビュー困難性
-
----
-
-# 課題
-
-## 事業的課題：レガシーコードの限界
-
-**状況:** 仕様書なし・テストなし・理解者不在の「三重苦」
+**具体的に生じうる課題**
 
 | 課題            | 内容                                                                                         |
 | :-------------- | :------------------------------------------------------------------------------------------- |
@@ -48,17 +36,44 @@ paginate: true
 | **2. 変更困難** | 影響範囲が見えず、機能追加がギャンブル化。<br>調査に膨大な工数がかかる。                     |
 | **3. 資産死蔵** | 過去の有用なビジネスロジックが密結合で埋没。<br>新規開発で再利用できず、車輪の再発明が発生。 |
 
+## 技術的課題
+
+- コンテキスト長の限界による入力可能なコード量の制限 → プログラムを全部読ませて回答させられはしない
+- コードのナレッジ化方法が未確定 → コードの構造を残したナレッジベースの構築が必要不可欠
+- 生成AIが生成するコードのレビュー困難性 → 生成AIが書くスピードに対して、人のレビューが追い付かない
+
+---
+
+# 課題
+
 ## 技術的課題：既存AI適用の壁
 
 **状況:** 単に「コードをAIに読ませる」だけでは解決できない技術的障壁がある。
 
-| 課題                                       | 内容                                                                           |
-| :----------------------------------------- | :----------------------------------------------------------------------------- |
-| 1. **コンテキストの限界 (Context Window)** | 一度に読める量に制限があり、全体構造や依存関係を把握できない。                 |
-| 2. **ハルシネーション (Hallucination)**    | 存在しないライブラリの使用や、嘘の仕様を回答するリスク。                       |
-| 3. **レビューのボトルネック**              | AIの生成速度に人間が追いつけず、**「誰も理解できないコード」**が再生産される。 |
-| 4. **解析の難易度**                        | レガシーコード（動的型付け・GOTO文）は静的解析（AST）が困難。                  |
+| 課題                                       | 内容                                                                             |
+| :----------------------------------------- | :------------------------------------------------------------------------------- |
+| 1. **コンテキストの限界 (Context Window)** | 一度に読める量に制限があり、全体構造や依存関係を把握できない。                   |
+| 2. **ハルシネーション (Hallucination)**    | 存在しないライブラリの使用や、嘘の仕様を回答するリスク。                         |
+| 3. **レビューのボトルネック**              | AIの生成速度に人間が追いつけず、 **「誰も理解できないコード」** が再生産される。 |
+| 4. **解析の難易度**                        | レガシーコード（動的型付け・GOTO文）は静的解析（AST）が困難。                    |
+
+1. 確実に仕様に基づいた実装であることを担保すること
+   1. 生成AIが間違えずに実装できること
+   2. 人が読んで理解できる単位・範囲で実装すること
+2. レガシーコードを資産化できること
+   1. レガシーコードから仕様書が作成できること
+   2. レガシーコードからナレッジベースが構築できること
+      1. レガシーコードに対する質問回答ができること
+      2. レガシーコードを活用した新規コードの生成に再利用できること
 
 ---
 
 # 提案手法
+
+---
+
+# 実施事項①
+
+---
+
+# 実施事項②
