--- a/remote_flow/既存業務フロー.md
+++ b/remote_flow/既存業務フロー.md
@@ -55,7 +55,7 @@ sequenceDiagram
 - 効率化
   - 2 備品保管場所→貸出機(30秒→0秒)
   - 4 ユーザー読み込み(10秒→0秒)
-  - ★現品確認を容易にしたい
+  - ★現品確認(棚卸)を容易にしたい
 
 ```mermaid
 graph TD
