Refactor existing business flow documentation to include various work-related applications and streamline the approval process. Added reminders for overtime applications and updated sequence diagrams accordingly.

--- a/remote_flow/既存業務フロー.md
+++ b/remote_flow/既存業務フロー.md
@@ -1,19 +1,24 @@
 # 既存業務フロー
 
-## 在宅勤務申請
+## 勤務関係の申請
+
+- 対象の申請
+  - 在宅勤務申請
+  - 休暇申請
+  - 休日出勤
+  - 特別条項
+  - 定時日残業
 
 - 課題
   - 定型のメールを毎回作成する無駄(5分→1分×室員の改善)
   - 上長のメール承認の煩雑さ(1分→30秒×室員の改善　※室員分だけ承認するため)
   - 上長の承認履歴の確認の煩雑さ(2分→30秒×室員の改善　※室員分だけ承認するため)
 
-##### 既存業務フロー
-
 ```mermaid
 sequenceDiagram
     participant Staff as 申請者
     participant Boss as 上長
-    Note over Staff, Boss: 在宅勤務申請（メール）
+    Note over Staff, Boss: 勤務関係の申請（メール）
 
     Staff->>Boss: 申請メールを送付
     Boss-->>Boss: 内容の確認・検討
@@ -46,6 +51,26 @@ sequenceDiagram
     Note over Staff, Boss: 在宅/出張終了報告（Teams）
     Staff->>Boss: Teamsチャットを送付
     Boss-->>Boss: 内容の確認
+```
+
+## 定時残業申請のリマインド
+
+- 効率化
+  - 定時退社 or 休暇の記録(◯秒→◯秒)
+  - 対象者へのメール作業(◯秒→◯秒)
+
+```mermaid
+sequenceDiagram
+    participant Sa as 事務
+    participant Staff as 申請者
+
+    loop 月～水曜
+      Sa-->>Sa: 定時退社 or 休暇の記録
+    end
+    Sa-->>Sa: 定時日残業の対象者を確認
+    Sa-->>Staff: 定時日残業申請のリマインド
+    Staff-->>Staff: 定時日残業申請の検討
+
 ```
 
 ## 備品貸出
